--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
+    "axios": "^1.3.4",
     "mongoose": "^6.9.3",
     "next": "12.3.1",
     "react": "18.2.0",
