--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "mongoose": "^7.0.1",
     "next": "13.2.3",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "uuid": "^9.0.0"
